base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: step-ca
spec:
  strategy:
    type: Recreate
  replicas: 1
  template:
    spec:
      volumes:

        - name: step-ca-data
          persistentVolumeClaim:
            claimName: step-ca-data

        - name: step-ca-config
          configmMap:
            name: step-ca-config

      containers:
        - name: step-ca
          image: docker.io/smallstep/step-ca:0.25.2
          command:
            - ./step-ca
            - --password-file=password
            - /home/step/config/ca.json
          ports:
            - name: http
              containerPort: 9000
          volumeMounts:

            - name: step-ca-data
              mountPath: /home/step
