base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: step-ca
spec:
  ports:
  - name: http
    port: 9000
    targetPort: http
